src/infrastructure/kubernetes/accounts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deployment
  labels:
    app: accounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: vasilvelikovkwetter.azurecr.io/accounts
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4000
