src/infrastructure/kubernetes/details-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-deployment
  labels:
    app: details
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
  template:
    metadata:
      labels:
        app: details
    spec:
      containers:
        - name: details
          image: kwetteracr.azurecr.io/details
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: details-service
spec:
  selector:
    app: details
  ports:
    - protocol: TCP
      port: 4012
      targetPort: 4000
