src/infrastructure/kubernetes/following-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: following-deployment
  labels:
    app: following
spec:
  replicas: 1
  selector:
    matchLabels:
      app: following
  template:
    metadata:
      labels:
        app: following
    spec:
      containers:
        - name: following
          image: vjvkwetter.azurecr.io/following
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: following-service
spec:
  selector:
    app: following
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4000
