src/infrastructure/kubernetes/likes-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: likes-deployment
  labels:
    app: likes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: likes
  template:
    metadata:
      labels:
        app: likes
    spec:
      containers:
        - name: likes
          image: kwetteracr.azurecr.io/likes
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: likes-service
spec:
  selector:
    app: likes
  ports:
    - protocol: TCP
      port: 4006
      targetPort: 4000
