src/infrastructure/kubernetes/mentioning_posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mentioning-posts-deployment
  labels:
    app: mentioning-posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mentioning-posts
  template:
    metadata:
      labels:
        app: mentioning-posts
    spec:
      containers:
        - name: mentioning-posts
          image: kwetteracr.azurecr.io/mentioning_posts
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: mentioning-posts-service
spec:
  selector:
    app: mentioning-posts
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4000
