src/infrastructure/kubernetes/mentions-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mentions-deployment
  labels:
    app: mentions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mentions
  template:
    metadata:
      labels:
        app: mentions
    spec:
      containers:
        - name: mentions
          image: kwetteracr.azurecr.io/mentions
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: mentions-service
spec:
  selector:
    app: mentions
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4000
