src/infrastructure/kubernetes/nats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          args: [
            '-p',
            '$(PORT)',
            '-m',
            '$(MONITORING_PORT)',
            '-hbi',
            '5s',
            '-hbt',
            '5s',
            '-hbf',
            '2',
            '-SD',
            '-cid',
            '$(CLUSTER_ID)'
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222

    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
