src/infrastructure/kubernetes/pictures-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pictures-deployment
  labels:
    app: pictures
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pictures
  template:
    metadata:
      labels:
        app: pictures
    spec:
      containers:
        - name: pictures
          image: kwetteracr.azurecr.io/pictures
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: pictures-service
spec:
  selector:
    app: pictures
  ports:
    - protocol: TCP
      port: 4010
      targetPort: 4000
