src/infrastructure/kubernetes/timeline-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-deployment
  labels:
    app: timeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline
  template:
    metadata:
      labels:
        app: timeline
    spec:
      containers:
        - name: timeline
          image: kwetteracr.azurecr.io/timeline
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-service
spec:
  selector:
    app: timeline
  ports:
    - protocol: TCP
      port: 4007
      targetPort: 4000
