src/infrastructure/kubernetes/trend_posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-posts-deployment
  labels:
    app: trend-posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trend-posts
  template:
    metadata:
      labels:
        app: trend-posts
    spec:
      containers:
        - name: trend-posts
          image: kwetteracr.azurecr.io/trend_posts
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: trend-posts-service
spec:
  selector:
    app: trend-posts
  ports:
    - protocol: TCP
      port: 4009
      targetPort: 4000
