src/infrastructure/kubernetes/trends-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trends-deployment
  labels:
    app: trends
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trends
  template:
    metadata:
      labels:
        app: trends
    spec:
      containers:
        - name: trends
          image: kwetteracr.azurecr.io/trends
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: trends-service
spec:
  selector:
    app: trends
  ports:
    - protocol: TCP
      port: 4008
      targetPort: 4000
