src/infrastructure/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kwetter-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: '/production'
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 4000
